# cargo-proc-macro

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/cli/: templates.rs
