[package]
name = "cargo-proc-macro"
description = "Kickstart a proc-macro project with a straight-forward template."
version = "0.1.2"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
repository = "https://github.com/bbqsrc/cargo-proc-macro"
edition = "2018"
license = "EUPL-1.2+"

[dependencies]
gumdrop = "0.8.0"
anyhow = "1.0.32"
thiserror = "1.0.20"
